Fix bug where inputs could overflow and cause issues.

--- a/css/roomManager.css
+++ b/css/roomManager.css
@@ -35,9 +35,8 @@
 }
 
 #roomManager #roomIdInput, #roomManager #nicknameInput{
-	width: 32vw;
-	min-width: 550px;
-	max-width: 100vw;
+	width: calc(100vw - 16px);
+	max-width: 550px;
 	font-size: 2.5em;
 	padding: 5px;
 }
