--- a/packages/index.css
+++ b/packages/index.css
@@ -40,11 +40,9 @@
 }
 
 #roomManager #roomIdInput, #roomManager #nicknameInput{
-	width: 32vw;
-	width: calc(var(--vw) * 32);
-	min-width: 550px;
-	max-width: 100vw;
-	max-width: calc(var(--vw) * 100);
+	width: calc(100vw - 16px);
+	width: calc(calc(var(--vw) * 100) - 16px);
+	max-width: 550px;
 	font-size: 2.5em;
 	padding: 5px;
 }
